app/styles/modules/mobile/_artwork.scss
@media (min-width : 320px) and (max-width : 480px){
  .artwork{
    max-width: 300px;
    margin: 0 auto;
  }

  .artwork-list-item{
    max-width: 280px;
  }

  p.artwork-title{
    font-size: 20px;
    line-height: 24px;
  }

  .artwork-show{
    max-width: 300px;
    margin: 25px auto;
    text-align: center;
  }

  .artwork-show>img{
    max-width: 80%;
    border: 5px solid white;
    box-shadow: 1px 1px 2px rgba(0,0,0,0.3);
  }

  .artwork-show-title{
    margin: 0 auto;
    display: block;
    width: 300px;
    font-size: 20px;
    line-height: 24px;
    font-weight: 500;
  }

  .artwork-show-date{
    display: block;
    font-size: 18px;
    line-height: 24px;
  }

////////community gallery////////
  .gallery{
    max-width: 300px;
    margin: 0 auto;
  }

  form.user-gallery-upload{
    display: block;
    width: 300px;
    height: 400px;
    padding: 20px;
  }

  form.user-gallery-upload>input{
    width: 250px;
  }

  .gallery-edit{
    display: block;
    width: 300px;
    margin: 0 auto;
  }

  .gallery-edit-button{
    display: inline-block;
    font-size: 18px;
    padding: 10px;
  }

  .add-gallery{
    display: block;
    padding: 29px 0 11px 10px;
  }
}

@media (min-width : 480px)
and (max-width : 1000px) {
  .artwork{
    max-width: 650px;
    margin: 0 auto;
  }

  .artwork-list-item{
    max-width: 400px;
  }

  p.artwork-title{
    font-size: 20px;
    line-height: 24px;
  }

  .artwork-show{
    max-width: 800px;
    margin: 25px auto;
    text-align: center;
  }

  .artwork-show>img{
    max-width: 80%;
    border: 5px solid white;
    box-shadow: 1px 1px 2px rgba(0,0,0,0.3);
  }

  .artwork-show-title{
    margin: 0 auto;
    display: block;
    max-width: 500px;
    font-size: 20px;
    line-height: 24px;
    font-weight: 500;
  }

  .artwork-show-date{
    display: block;
    font-size: 18px;
    line-height: 24px;
  }

  ////////community gallery////////
  .gallery{
    max-width: 650px;
    margin: 0 auto;
  }

  form.user-gallery-upload{
    display: block;
    max-width: 650px;
    height: 100px;
    padding: 10px;
  }

  form.user-gallery-upload>input{
    width: 150px;
    margin-top: 5px;
  }

  .gallery-edit{
    display: block;
    width: 300px;
    margin: 0 auto;
  }

  .gallery-edit-button{
    display: inline-block;
    font-size: 18px;
    padding: 10px;
  }

  .add-gallery{
    display: block;
    padding: 29px 0 11px 10px;
  }

  button.upload-button{
    margin: 0;
  }
}

